netlify configurations changed